# do-app-rust-q-and-a

./: .gitignore  Cargo.toml  Dockerfile
.do/: app.yaml  deploy.template.yaml
.sqlx/: query-06d2992ccdbb9429f60b05267b7ada7f6741a003c0c92499e0d8ee175f2e8a85.json  query-80f37d4d70c7a290e23dc846b8b388594690bf76c4c0f6a15dbb737bdd4aa265.json  query-8fa1f11448b855f56806cf171d553c535e4904865cf5d9d6c7a4c6d25634d573.json  query-e311a32d521984ddc29b97da3c4dc75e13c14a1a7858b5b76d1504d94ccb36e9.json  query-e4ba5a083d39ad804b98b664d17966ec4df98e64ccbeac8f80689a2d4c639088.json
migrations/: 20250314231312_create_users_table.up.sql  20250317224307_create_topics_table.up.sql
src/: api.rs  auth.rs  db.rs  main.rs  models.rs  types.rs
static/: index.js  output.css  style.css
templates/: base.html.j2  index.html.j2
