[package]
name = "q-and-a"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.26"
reqwest = { version = "0.12.14", features = ["json"] }
rocket = { version = "0.5.1", features = ["secrets"] }
rocket_db_pools = { version = "0.2.0", features = ["diesel_postgres", "sqlx_postgres", "sqlx_sqlite"] }
rocket_oauth2 = "0.5.0"
rocket_prometheus = "0.10.1"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "migrate"] }
